# stickydesign

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  Cargo.toml  MANIFEST  README.md  algorithm.md  dnastackingbig.csv  index.html  pyproject.toml  setup.cfg  setup.py  stickydesign.py
.github/workflows/: python-tests.yml
accel/: Cargo.toml  pyproject.toml
accel/src/: lib.rs
accel/tests/: test_compare.py
docs/: Makefile  changelog.rst  conf.py  index.rst  modules.rst  stickydesign.rst
src/: _stickyext.c  lib.rs  stickydesign.py
src/params/: dnastackingbig.csv
src/stickydesign/: __init__.py  _stickyext.py  endclasses.py  energetics_basic.py  energetics_basic_old.py  energetics_daoe.py  multimodel.py  newparams.py  plots.py  stickydesign.py  version.py
src/stickydesign/stickydesign2/: choosers.py  design_compat.py  energetics_basic.py  energetics_daoe.py  filters.py  plots.py  seqclasses.py  util.py
stickydesign/: __init__.py  _stickyext.c  endclasses.py  energetics.py  energetics_basic.py  energetics_basic_new.py  energetics_daoe.py  multimodel.py  params.py  plots.py  stickydesign.py  test_general.py
stickydesign/stickydesign2/: design_compat.py  seqclasses.py  util.py
stickydesign2/: __init__.py  choosers.py  energetics_basic.py  energetics_daoe.py  filters.py  newparams.py  plots.py  seqclasses.py
tests/: test_accel.py  test_compare.py  test_endclasses.py  test_gen.py  test_general.py
