[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = 'stickydesign-accel'
description = "Accelerated functions in Rust for stickydesign."
dependencies = ['numpy', 'stickydesign ~= 0.9.0.a1']
version = "0.9.0.a1"
authors = [ {name = "Constantine Evans", email = "const@costi.eu"} ]
license = {text = "BSD 3-Clause"}
classifiers = [
     "Development Status :: 3 - Alpha",
     "Programming Language :: Python :: 3",
     "Programming Language :: Rust",
     "License :: OSI Approved :: BSD License",
     "Intended Audience :: Science/Research",
     "Topic :: Scientific/Engineering"
]

[project.urls]
repository = "https://github.com/cgevans/stickydesign-accel"

[project.optional-dependencies]
test = [
     "pytest"
]

[tool.pytest.ini_options]
testpaths = ["tests"]