# SPDX-FileCopyrightText: 2021 - 2023 Constantine Evans <stickydesign@mb.costi.net>
#
# SPDX-License-Identifier: EUPL-1.2

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.10"
# warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov qslib --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[project]
name = "stickydesign"
version = "0.9.0.a2"
authors = [{ name = "Constantine Evans", email = "const@costi.net" }]
description = "StickyDesign DNA Tile Sticky End Package"
readme = "README.md"
dependencies = ["numpy ~= 1.20"]

[project.urls]
homepage = "https://dna.caltech.edu/StickyDesign"
source = "https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign"
tracker = "https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign/issues"
download = "https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign/releases"
changelog = "https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign/blob/master/docs/changelog.rst" 


[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
accel = ["stickydesign-accel == 0.9.0.a2"]
testing = ["pytest-cov", "pytest-benchmark", "pytest"]


# packages = ["stickydesign", "stickydesign.stickydesign2"]

#[options.package_data]
#stickydesign = ["params/dnastackingbig.csv"]
