# SPDX-FileCopyrightText: 2021 - 2023 Constantine Evans <stickydesign@mb.costi.net>
#
# SPDX-License-Identifier: EUPL-1.2

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.10"
# warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov src/stickydesign --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.setuptools.package-data]
"stickydesign.params" = ["*.csv"]

[project]
name = "stickydesign"
version = "0.9.1"
authors = [{ name = "Constantine Evans", email = "const@costi.net" }]
description = "StickyDesign DNA Tile Sticky End Package"
readme = "README.md"
dependencies = ["numpy ~= 1.20", "typing_extensions~=4.0"]

[project.urls]
homepage = "https://dna.caltech.edu/StickyDesign"
source = "https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign"
tracker = "https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign/issues"
download = "https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign/releases"
changelog = "https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign/blob/master/docs/changelog.rst" 


[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
accel = ["stickydesign-accel == 0.9.1"]
tests = ["pytest-cov", "pytest-benchmark", "pytest", "hypothesis"]


# packages = ["stickydesign", "stickydesign.stickydesign2"]

#[options.package_data]
#stickydesign = ["params/dnastackingbig.csv"]


[tool.ruff]
target-version = "py312"

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]

fixable = ["ALL"]
select = ["E4", "E7", "E9", "F", "B", "A001", "A002", "C4", "ICN", "PIE", "PYI", "RSE",
    "RET501", "SIM", "TID", "TCH", "INT", "PTH", "PD", "PLR", "PLW", "TRY",
    "NPY", "PERF", "FURB", "RUF", "UP", "D"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501", "TRY003", "D1", "UP007", "D205", "D401", "UP032", "UP", "PLR0913", "PLR2004", "PLR0912"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
