[metadata]
name = stickydesign
version = 0.9.0.a2
author = Constantine Evans
author_email = const@costi.eu
description = StickyDesign DNA Tile Sticky End Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dna.caltech.edu/StickyDesign
project_urls =
    Source = https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign
    Tracker = https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign/issues
    Download = https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign/releases
    Changelog = https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign/blob/master/docs/changelog.rst

[options]
package_dir = 
    = src
packages =
    stickydesign
    stickydesign.stickydesign2
install_requires =
    numpy ~= 1.20

[options.extras_require]
accel =
    stickydesign-accel == 0.9.0.a2
testing = 
    pytest-cov
    pytest-benchmark
    pytest

[options.package_data]
stickydesign = 
    params/dnastackingbig.csv