[package]
name = "stickydesign-accel"
version = "0.9.0"
edition = "2021"

[lib]
name = "stickydesign_accel"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
rayon = ["ndarray/rayon"]

[dependencies]
ndarray = {version = "0.15", features = ["approx", "blas", "serde"]}
numpy = {version = "0.20"}
pyo3 = {version = "0.20", features = ["extension-module"]}

