[package]
name = "stickydesign-accel"
version = "0.9.1"
edition = "2021"

[lib]
name = "stickydesign_accel"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
rayon = ["ndarray/rayon"]

[dependencies]
ndarray = {version = "0.15", features = ["approx", "blas", "serde"]}
numpy = {version = "0.21"}
pyo3 = {version = "0.21", features = ["extension-module", "experimental-declarative-modules"]}

