[build-system]
requires = ["maturin~=1.5"]
build-backend = "maturin"

[project]
name = 'stickydesign-accel'
description = "Accelerated functions in Rust for stickydesign."
dependencies = ['numpy', 'stickydesign ~= 0.9.2']
version = "0.9.2"
authors = [ {name = "Constantine Evans", email = "const@costi.net"} ]
license = {text = "BSD 3-Clause"}
classifiers = [
     "Development Status :: 3 - Alpha",
     "Programming Language :: Python :: 3",
     "Programming Language :: Rust",
     "License :: OSI Approved :: BSD License",
     "Intended Audience :: Science/Research",
     "Topic :: Scientific/Engineering"
]

[project.urls]
homepage = "https://dna.caltech.edu/StickyDesign"
source = "https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign"
tracker = "https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign/issues"
download = "https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign/releases"
changelog = "https://github.com/DNA-and-Natural-Algorithms-Group/stickydesign/blob/master/docs/changelog.rst" 

[project.optional-dependencies]
test = [
     "pytest"
]

[tool.pytest.ini_options]
testpaths = ["tests"]